Revert "fixed alignment issues"
This reverts commit fe71a67cfc6339e6d191bd1d947b709e55f4a96e.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ form {
 }
 
 .second-helping {
-	color: var(--secondary);
+	color: var(--tertiary-dark);
 }
 
 .footer-copyright {
@@ -124,7 +124,7 @@ form {
 
 .submit-button {
 	position: relative;
-	left: 60%;
+	right: 15%;
 }
 
 .form {
